force-app/main/default/objects/Contact/fields/Adoption_Finalization_Date__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Finalization_Date__c</fullName>
    <label>Adoption Finalization Date</label>
    <type>Date</type>
</CustomField>