force-app/main/default/objects/Contact/fields/Any_Previous_Parenting_Experience__c.field-meta.xml
<CustomField>
    <fullName>Any_Previous_Parenting_Experience__c</fullName>
    <label>Any Previous Parenting Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>