force-app/main/default/objects/Contact/fields/Boarders_Renters__c.field-meta.xml
<CustomField>
    <fullName>Boarders_Renters__c</fullName>
    <label>Boarders/Renters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>