force-app/main/default/objects/Contact/fields/Caregiver_ID__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_ID__c</fullName>
    <displayFormat>CID-{00000}</displayFormat>
    <label>Caregiver ID</label>
    <type>AutoNumber</type>
</CustomField>