force-app/main/default/objects/Contact/fields/Caregiver_Type__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Type__c</fullName>
    <label>Caregiver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
            <value>
                <fullName>Adoptive Parent</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>