force-app/main/default/objects/Contact/fields/Certification_Revocation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Certification_Revocation_Reason__c</fullName>
    <label>Certification Revocation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>