force-app/main/default/objects/Contact/fields/Foster_Care_Application__c.field-meta.xml
<CustomField>
    <fullName>Foster_Care_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Foster_Care_Application__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>