force-app/main/default/objects/Contact/fields/Foster_cert_revoked_suspended__c.field-meta.xml
<CustomField>
    <fullName>Foster_cert_revoked_suspended__c</fullName>
    <label>Foster cert revoked/suspended?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>