force-app/main/default/objects/Contact/fields/Foster_Parent_License_Status__c.field-meta.xml
<CustomField>
    <fullName>Foster_Parent_License_Status__c</fullName>
    <label>Foster Parent License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>