force-app/main/default/objects/Contact/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <label>Job Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>