force-app/main/default/objects/Contact/fields/Number_of_Other_Children_in_Home__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Other_Children_in_Home__c</fullName>
    <label>Number of Other Children in Home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>