force-app/main/default/objects/Contact/fields/Placement_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Placement_Capacity__c</fullName>
    <label>Placement Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>