force-app/main/default/objects/Contact/fields/Special_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Special_Training_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Training Completed?</label>
    <type>Checkbox</type>
</CustomField>