force-app/main/default/objects/Contact/fields/Therapy_Certification_Completed__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Certification_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Therapy Certification Completed?</label>
    <type>Checkbox</type>
</CustomField>