force-app/main/default/objects/Contact/fields/Total_members_in_Family__c.field-meta.xml
<CustomField>
    <fullName>Total_members_in_Family__c</fullName>
    <label>Total Members in Family</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>