force-app/main/default/objects/Contact/fields/Total_Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Expense__c</fullName>
    <label>Total Monthly Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>