force-app/main/default/objects/Contact/fields/Transportation_in_Family__c.field-meta.xml
<CustomField>
    <fullName>Transportation_in_Family__c</fullName>
    <label>Transportation in Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>