force-app/main/default/objects/Contact/fields/Were_You_Accepted_or_Denied__c.field-meta.xml
<CustomField>
    <fullName>Were_You_Accepted_or_Denied__c</fullName>
    <label>Were You Accepted or Denied?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>