force-app/main/default/objects/Contact/fields/Work_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Location_Type__c</fullName>
    <label>Work Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>