force-app/main/default/objects/Contact/listViews/Foster_Care_Contact.listView-meta.xml
<ListView>
    <fullName>Foster_Care_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Caregiver_ID__c</field>
        <operation>contains</operation>
        <value>CID</value>
    </filters>
    <label>Foster Care Contact</label>
</ListView>